--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,11 +36,12 @@
   </div>
 </div>
 
-<header>
+<header class="header">
 
   <div class="headers">
     <div class="logo">
-      <img loading="lazy"
+      <img class="img"
+           loading="lazy"
            src="https://cdn1.ozone.ru/s3/cms/35/t10/wc200/1doodle_new.png"
            alt="Ozon">
     </div>
@@ -58,24 +59,25 @@
       <div class="search-bar">
         <div class="search-categories">
 
-          <span>Везде</span>
+          <span id="search-activity">Уже искали</span>
 
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16">
             <path fill="currentColor" d="m4 6 4 5 4-5H4Z"></path>
           </svg>
         </div>
 
-        <input class="search-input"
+        <input id="search-input"
+               class="search-input"
                placeholder="Искать на Ozon">
 
       </div>
 
-      <div class="search-button">
+      <button id="search-button" class="search-button">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24">
           <path fill="currentColor"
                 d="M11 5a6 6 0 1 0 0 12c1.619 0 3.169-.639 4.24-1.656a1.101 1.101 0 0 1 1.537.019l4.93 4.93a1 1 0 0 1-1.414 1.414l-4.346-4.346A8.298 8.298 0 0 1 11 19a8 8 0 1 1 7.875-6.587 1 1 0 0 1-1.968-.351A6 6 0 0 0 11 5Z"></path>
         </svg>
-      </div>
+      </button>
     </div>
 
     <div class="user-menu">
@@ -186,10 +188,10 @@
   </div>
 </header>
 
-
 <div class="content">
   <div class="sale-img-container">
-    <img loading="lazy"
+    <img class="img"
+         loading="lazy"
          src="https://cdn1.ozone.ru/s3/cms/33/t2b/wc1450/banner_1416x100.jpg">
   </div>
 
@@ -204,23 +206,23 @@
 
       <div class="option-content">
         <div class="item">
-          <img loading="lazy" src="https://cdn1.ozone.ru/s3/cms/85/t91/wc200/03.jpg">
-          <span> Ноутбуки </span>
+          <img class="img" loading="lazy" src="https://cdn1.ozone.ru/s3/cms/85/t91/wc200/03.jpg">
+          <span class="item-text"> Ноутбуки </span>
         </div>
 
         <div class="item">
-          <img loading="lazy" src="https://cdn1.ozone.ru/s3/cms/bf/t9f/wc200/01.jpg">
-          <span> Техника для кухни </span>
+          <img class="img" loading="lazy" src="https://cdn1.ozone.ru/s3/cms/bf/t9f/wc200/01.jpg">
+          <span class="item-text"> Техника для кухни </span>
         </div>
 
         <div class="item">
-          <img loading="lazy" src="https://cdn1.ozone.ru/s3/cms/78/t39/wc200/02.jpg">
-          <span> Крупная бытовая техника </span>
+          <img class="img" loading="lazy" src="https://cdn1.ozone.ru/s3/cms/78/t39/wc200/02.jpg">
+          <span class="item-text"> Крупная бытовая техника </span>
         </div>
 
         <div class="item">
-          <img loading="lazy" src="https://cdn1.ozone.ru/s3/cms/26/t0f/wc200/04.jpg">
-          <span> Спортивные товары </span>
+          <img class="img" loading="lazy" src="https://cdn1.ozone.ru/s3/cms/26/t0f/wc200/04.jpg">
+          <span class="item-text"> Спортивные товары </span>
         </div>
 
       </div>
@@ -235,23 +237,23 @@
 
       <div class="option-content">
         <div class="item">
-          <img loading="lazy" src="https://cdn1.ozone.ru/s3/cms/e8/ta4/wc200/480_480_app.jpg">
-          <span>  Для комфортных прогулок </span>
+          <img class="img" loading="lazy" src="https://cdn1.ozone.ru/s3/cms/e8/ta4/wc200/480_480_app.jpg">
+          <span class="item-text">  Для комфортных прогулок </span>
         </div>
 
         <div class="item">
-          <img loading="lazy" src="https://cdn1.ozone.ru/s3/cms/72/tea/wc200/480_480_app_2.jpg">
-          <span> Для занятий спортом </span>
+          <img class="img" loading="lazy" src="https://cdn1.ozone.ru/s3/cms/72/tea/wc200/480_480_app_2.jpg">
+          <span class="item-text"> Для занятий спортом </span>
         </div>
 
         <div class="item">
-          <img loading="lazy" src="https://cdn1.ozone.ru/s3/cms/d8/t4b/wc200/480_480_app_3.jpg">
-          <span> На подарок </span>
+          <img class="img" loading="lazy" src="https://cdn1.ozone.ru/s3/cms/d8/t4b/wc200/480_480_app_3.jpg">
+          <span class="item-text"> На подарок </span>
         </div>
 
         <div class="item">
-          <img loading="lazy" src="https://cdn1.ozone.ru/s3/cms/cd/tf6/wc200/480_480_app_4.jpg">
-          <span> Обновки для детей </span>
+          <img class="img" loading="lazy" src="https://cdn1.ozone.ru/s3/cms/cd/tf6/wc200/480_480_app_4.jpg">
+          <span class="item-text"> Обновки для детей </span>
         </div>
 
       </div>
@@ -267,23 +269,23 @@
 
       <div class="option-content">
         <div class="item">
-          <img loading="lazy" src="https://cdn1.ozone.ru/s3/cms/a4/t9f/wc200/400_400_____5.jpg">
-          <span> Детские товары </span>
+          <img class="img" loading="lazy" src="https://cdn1.ozone.ru/s3/cms/a4/t9f/wc200/400_400_____5.jpg">
+          <span class="item-text"> Детские товары </span>
         </div>
 
         <div class="item">
-          <img loading="lazy" src="https://cdn1.ozone.ru/s3/cms/bc/tbb/wc200/400_400_____3.jpg">
-          <span>  Продукты питания </span>
+          <img class="img" loading="lazy" src="https://cdn1.ozone.ru/s3/cms/bc/tbb/wc200/400_400_____3.jpg">
+          <span class="item-text">  Продукты питания </span>
         </div>
 
         <div class="item">
-          <img loading="lazy" src="https://cdn1.ozone.ru/s3/cms/08/t01/wc200/400_400.jpg">
-          <span> Товары для животных </span>
+          <img class="img" loading="lazy" src="https://cdn1.ozone.ru/s3/cms/08/t01/wc200/400_400.jpg">
+          <span class="item-text"> Товары для животных </span>
         </div>
 
         <div class="item">
-          <img loading="lazy" src="https://cdn1.ozone.ru/s3/cms/51/t89/wc200/400_400_____2.jpg">
-          <span> Бытовая химия </span>
+          <img class="img" loading="lazy" src="https://cdn1.ozone.ru/s3/cms/51/t89/wc200/400_400_____2.jpg">
+          <span class="item-text"> Бытовая химия </span>
         </div>
 
       </div>
@@ -298,23 +300,23 @@
 
       <div class="option-content">
         <div class="item">
-          <img loading="lazy" src="https://cdn1.ozone.ru/s3/cms/15/t93/wc200/400x400kazakhstan_1.jpeg">
-          <span> Казахстан </span>
+          <img class="img" loading="lazy" src="https://cdn1.ozone.ru/s3/cms/15/t93/wc200/400x400kazakhstan_1.jpeg">
+          <span class="item-text"> Казахстан </span>
         </div>
 
         <div class="item">
-          <img loading="lazy" src="https://cdn1.ozone.ru/s3/cms/c8/tc6/wc200/400400korea.jpg">
-          <span> Корея </span>
+          <img class="img" loading="lazy" src="https://cdn1.ozone.ru/s3/cms/c8/tc6/wc200/400400korea.jpg">
+          <span class="item-text"> Корея </span>
         </div>
 
         <div class="item">
-          <img loading="lazy" src="https://cdn1.ozone.ru/s3/cms/ca/tbd/wc200/400400china.jpg">
-          <span> Китай </span>
+          <img class="img" loading="lazy" src="https://cdn1.ozone.ru/s3/cms/ca/tbd/wc200/400400china.jpg">
+          <span class="item-text"> Китай </span>
         </div>
 
         <div class="item">
-          <img loading="lazy" src="https://cdn1.ozone.ru/s3/cms/23/t2c/wc200/400400belarus.jpg">
-          <span> Беларусь </span>
+          <img class="img" loading="lazy" src="https://cdn1.ozone.ru/s3/cms/23/t2c/wc200/400400belarus.jpg">
+          <span class="item-text"> Беларусь </span>
         </div>
 
       </div>
@@ -325,7 +327,8 @@
 
 </div>
 
-
-<footer>
-  <span>© 1998 – 2022 ООО «Интернет</span>
+<footer class="footer">
+  <span class="footer-text">© 1998 – 2022 ООО «Интернет»</span>
 </footer>
+
+<div id="overlay-container" class="overlay-container"></div>
