--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+
 body {
-  display: flex;
-  justify-content: center;
   height: 100vh;
-  overflow: hidden;
+  margin: 0;
 }
