--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 
+html {
+  min-height: 100%;
+  overflow-y: scroll;
+}
+
 body {
-  height: 100vh;
   margin: 0;
+  min-height: 100%;
+  height: 100vh;
 }
