--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,11 +3,7 @@
 <app-header class="header"></app-header>
 
 <div class="container">
-
-  <app-main></app-main>
-
-  <app-catalog></app-catalog>
-
+  <router-outlet></router-outlet>
 </div>
 
 <app-footer class="footer"></app-footer>
