--- a/src/modules/shared/components/filters/filters.component.html
+++ b/src/modules/shared/components/filters/filters.component.html
@@ -2,6 +2,6 @@
 
 <div *ngFor="let category of categories">
   <div class="category-container">
-    <a [href]="'categories/' + category.id" class="category">{{category.name}}</a>
+    <a [href]="'category/' + category.id" class="category">{{category.name}}</a>
   </div>
 </div>
