--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,14 +12,16 @@
 }
 
 .header {
-  margin: auto;
+  margin: 0 auto 0 auto;
   width: 100%;
   max-width: 1400px;
 }
 
 .container {
   max-width: 1400px;
+  width: 100%;
   margin: 50px auto auto auto;
+  position: relative;
 }
 
 
