--- a/src/modules/pages/category/category.component.scss
+++ b/src/modules/pages/category/category.component.scss
@@ -1,3 +1,7 @@
+:host {
+  display: flex;
+}
+
 .filters {
   height: 100%;
   min-width: 250px;
@@ -9,8 +13,4 @@
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   justify-items: center;
-
-  .product {
-    border-radius: 4px;
-  }
 }
